# Bigint

./: .clangd-formart  .gitignore  CMakeLists.txt  README.md
include/: my_bigint.h
src/: CMakeLists.txt  my_bigint.cpp
tests/: CMakeLists.txt  test.cpp
